second commit adding files of lottery

--- a/brownie_fund_me/brownie-config.yaml
+++ b/brownie_fund_me/brownie-config.yaml
@@ -8,22 +8,25 @@ compiler:
 dotenv: .env
 wallets:
   from_key: ${PRIVATE_KEY}
-networks:
-  sepolia: 
-    explorer: https://api-sepolia.etherscan.io/
-    verify: True
-live:
-  - name: Ethereum
-    networks:
-      - name: Sepolia
-        chainid: 11155111
-        id: sepolia
-        host: https://sepolia.infura.io/v3/$WEB3_INFURA_PROJECT_ID
-        explorer: https://api-sepolia.etherscan.io/api
+
+# live:
+#   - name: Ethereum
+#     networks:
+#       - name: Sepolia
+#         chainid: 11155111
+#         id: sepolia
+#         host: https://sepolia.infura.io/v3/$WEB3_INFURA_PROJECT_ID
+#         explorer: https://api-sepolia.etherscan.io/api
 
 networks:
+  default: development
+  mainnet-fork:
+    eth_usd_price_feed: "0x5f4eC3Df9cbd43714FE2740f5E3616155c5b8419"
+    verify: False
   sepolia:
     eth_usd_price_feed: "0xD4a33860578De61DBAbDc8BFdb98FD742fA7028e"
     verify: True
   development:
+    verify: False
+  ganache-local:
     verify: False
